--- a/fase1/.env.example
+++ b/fase1/.env.example
@@ -1,16 +1,30 @@
 # Environment variables for ImaLink Fase 1
+# Copy this file to .env and fill in your actual values
 
 # Database
-DATABASE_URL=sqlite:///./imalink.db
+DATABASE_URL=sqlite:///C:/temp/imalink_data/imalink.db
 
 # File paths
-UPLOAD_DIRECTORY=C:/temp/imalink_uploads
-THUMBNAIL_DIRECTORY=C:/temp/imalink_thumbnails
+IMAGE_POOL_DIRECTORY=C:/temp/imalink_data/imalink_pool
 
 # Image processing settings
-THUMBNAIL_SIZE=200
-MAX_IMAGE_SIZE=2048
+POOL_QUALITY=85
 
 # Development
 DEBUG=True
 LOG_LEVEL=INFO
+
+# Optional: Cloud storage (leave empty to use local only)
+AWS_ACCESS_KEY_ID=your_access_key_here
+AWS_SECRET_ACCESS_KEY=your_secret_key_here
+AWS_S3_BUCKET=your_bucket_name
+
+# Optional: Email notifications  
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your_email@gmail.com
+SMTP_PASSWORD=your_app_password_here
+
+# Optional: External APIs
+GOOGLE_MAPS_API_KEY=your_google_maps_key_here
+OPENAI_API_KEY=your_openai_key_here
