--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,40 @@ backup/
 **/debug_*.py
 **/temp_*.py
 **/quick_test_*.py
+
+# Node.js / Frontend
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+# SvelteKit
+.svelte-kit/
+build/
+dist/
+
+# Vite
+.vite/
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Cache and temporary files
+*.tsbuildinfo
+.eslintcache
+
+# Frontend build artifacts
+/frontend/build/
+/frontend/dist/
+/frontend/.svelte-kit/
+
+# Scripts directory (temporary helper scripts)
+/scripts/
+
+# PowerShell helper scripts (development tools)
+*.ps1
