Er på linux. Har ryddet i filer og stier. Fjernet demo i Streamlit

--- a/fase1/.env.example
+++ b/fase1/.env.example
@@ -1,11 +1,11 @@
 # Environment variables for ImaLink Fase 1
 # Copy this file to .env and fill in your actual values
 
-# Database
-DATABASE_URL=sqlite:///C:/temp/imalink_data/imalink.db
+# Database (WSL/Linux paths)
+DATABASE_URL=sqlite:////mnt/c/temp/00imalink_data/imalink.db
 
-# File paths
-IMAGE_POOL_DIRECTORY=C:/temp/imalink_data/imalink_pool
+# File paths (WSL/Linux paths)
+IMAGE_POOL_DIRECTORY=/mnt/c/temp/00imalink_data/imalink_pool
 
 # Image processing settings
 POOL_QUALITY=85
