--- a/fase1/pyproject.toml
+++ b/fase1/pyproject.toml
@@ -22,9 +22,8 @@ dependencies = [
 dev = [
     "black==23.10.1",
     "httpx==0.25.2",
-    "ipykernel>=6.30.1",
     "isort==5.12.0",
-    "jupyterlab>=4.4.9",
     "pytest==7.4.3",
     "pytest-asyncio==0.21.1",
+    "requests>=2.32.5",
 ]
