--- a/fase1/pyproject.toml
+++ b/fase1/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13.7"
 dependencies = [
     "aiofiles>=24.1.0",
     "alembic>=1.16.5",
+    "cairosvg>=2.8.2",
     "fastapi>=0.118.0",
     "imagehash>=4.3.2",
     "piexif>=1.1.3",
