--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,9 @@
 	},
 	"dependencies": {
 		"axios": "^1.12.2",
-		"sharp": "^0.33.2",
+		"commander": "^12.0.0",
 		"exifreader": "^4.19.0",
 		"fs-extra": "^11.2.0",
-		"commander": "^12.0.0"
+		"sharp": "^0.33.2"
 	}
 }
