--- a/fase1/pyproject.toml
+++ b/fase1/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "alembic>=1.16.5",
     "cairosvg>=2.8.2",
     "fastapi>=0.118.0",
+    "flet>=0.28.3",
     "imagehash>=4.3.2",
     "piexif>=1.1.3",
     "pillow>=11.3.0",
