Deprecate frontend-driven test files
Moved 5 outdated test files to tests/deprecated/:
1. test_storage_api.py (271 lines) - Frontend-driven storage API
2. test_storage_service.py (419 lines) - Deprecated storage methods
3. test_image.py (203 lines) - Removed factory methods
4. test_import_session.py (173 lines) - Uses deprecated 'errors' field
5. test_routes.py (from legacy/) - Old API structure tests

These tests were for functionality removed during architecture shift:
- Frontend-driven file processing
- Browser File System Access API integration
- Factory methods on models (create_from_file, etc.)
- Complex storage directory generation
- Frontend-driven import workflows

Updated pytest.ini:
- Added 'norecursedirs = deprecated' to ignore deprecated tests
- Tests no longer collected from deprecated/ directory

Test Results:
Before: 80 tests total (59 passing, 21 failing)
After: 23 tests total (23 passing, 0 failing)

Active tests cover:
- Integration tests (full import workflow)
- Photo model tests (updated for new architecture)
- Legacy manual test scripts (still useful)

See tests/deprecated/README.md for complete details.

--- a/fase1/pytest.ini
+++ b/fase1/pytest.ini
@@ -3,6 +3,9 @@
 testpaths = tests
 python_paths = src
 
+# Ignore deprecated tests
+norecursedirs = deprecated
+
 # Test discovery
 python_files = test_*.py
 python_classes = Test*
