feat: Multi-user authentication system + ImageFile upload architecture overhaul
🔐 MAJOR: Multi-User Authentication System
- Add complete JWT-based authentication with user registration/login
- Add User model with username, email, password hashing (SHA256-crypt)
- Add complete user data isolation - users can only see their own data
- Add auth endpoints: /auth/register, /auth/login, /users/me, password change
- Update all repositories with user-scoped filtering (PhotoRepository, AuthorRepository, ImportSessionRepository)
- Add cross-user access prevention at repository level
- Add comprehensive user isolation test suite

🖼️ MAJOR: ImageFile Upload Architecture Overhaul
- Split upload into two crystal clear endpoints:
  * POST /image-files/new-photo - Upload completely new, unique photos (requires hotpreview)
  * POST /image-files/add-to-photo - Add companion files to existing photos (no hotpreview/perceptual_hash)
- Add dedicated schemas: ImageFileNewPhotoRequest, ImageFileAddToPhotoRequest, ImageFileUploadResponse
- Add clear error handling with specific messages for wrong endpoint usage
- Maintain legacy endpoint POST /image-files/ as deprecated but functional

📚 Documentation Updates
- Update API Reference v2.0 with authentication and new upload endpoints
- Add Frontend Integration Guide v2.0 with TypeScript examples
- Add Architecture Guide v2.0 documenting multi-user system design
- Update README files with new features and authentication system
- Update CHANGELOG with all major changes

🔧 Technical Improvements
- Add JWT token validation and security utilities
- Add user context passing through service layers
- Add database schema updates with user_id foreign keys
- Add proper error handling for authentication and upload scenarios
- Maintain backward compatibility with deprecation warnings

BREAKING CHANGES:
- All API endpoints now require authentication (except /auth/* and /health)
- Frontend must implement JWT authentication flow
- Upload logic should migrate 

--- a/fase1/pyproject.toml
+++ b/fase1/pyproject.toml
@@ -8,12 +8,15 @@ dependencies = [
     "aiofiles>=24.1.0",
     "alembic>=1.16.5",
     "cairosvg>=2.8.2",
+    "email-validator>=2.3.0",
     "fastapi>=0.118.0",
     "flet>=0.28.3",
     "imagehash>=4.3.2",
+    "passlib[bcrypt]>=1.7.4",
     "pillow>=11.3.0",
     "pydantic>=2.11.10",
     "python-dotenv>=1.1.1",
+    "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.43",
     "uvicorn[standard]>=0.37.0",
