feat: Add PhotoCollections system and major refactoring
- Implemented PhotoCollection model with JSON hothashes array for static photo organization
- Added complete CRUD API endpoints for collections (/api/v1/collections)
- Created repository, service, and schema layers for photo collections
- Added photo management operations (add, remove, reorder photos)
- Moved import_session_id from ImageFile to Photo model
- Removed user_id from ImageFile (access control via Photo only)
- Fixed import_session_id not being set during photo creation
- Fixed ImportSession.images_count with lazy='selectin' for photos relationship
- Removed image_files_count from User model
- Fixed PhotoSearch pagination (PaginatedResponse.meta.total)
- Added get_by_hothashes() method to PhotoRepository
- Updated all import paths to remove 'src.' prefix
- Added comprehensive documentation for PhotoCollection system
- Added DISABLE_AUTH configuration for testing without authentication

Major architecture improvements:
- Photo/ImageFile separation clarified and enforced
- Import workflow fixed and tested
- PhotoCollection for static albums vs SavedPhotoSearch for dynamic queries
- Flat organization, user-private, ordered arrays, auto cover photos

--- a/fase1/.env.example
+++ b/fase1/.env.example
@@ -14,6 +14,10 @@ POOL_QUALITY=85
 DEBUG=True
 LOG_LEVEL=INFO
 
+# Testing - Set to True to disable authentication (for easier testing)
+# WARNING: Only use this in development/testing, NEVER in production!
+DISABLE_AUTH=False
+
 # Optional: Cloud storage (leave empty to use local only)
 AWS_ACCESS_KEY_ID=your_access_key_here
 AWS_SECRET_ACCESS_KEY=your_secret_key_here
