Integrate imalink-core for image processing
Replace duplicate code with imalink-core library:
- HothashCalculator for SHA256 hash generation (photo_service.py, image_file_service.py)
- ExifExtractor integration in exif_utils.py (parsing still from exif_dict)
- PreviewGenerator for coldpreview generation with EXIF-aware rotation
- Add imalink-core dependency via GitHub

Benefits:
- Eliminates duplicate SHA256 hashing code
- Consistent EXIF-aware image rotation
- Foundation for future RAW support (NEF, CR2, ARW, DNG)
- Cleaner, more maintainable codebase
- Platform-independent image processing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "sqlalchemy>=2.0.43",
     "uvicorn[standard]>=0.37.0",
     "psycopg2-binary>=2.9.9",
+    "imalink-core",
 ]
 
 [dependency-groups]
@@ -36,6 +37,9 @@ dev = [
 
 [tool.uv]
 package = false
+
+[tool.uv.sources]
+imalink-core = { git = "https://github.com/kjelkols/imalink-core.git" }
 
 [build-system]
 requires = ["hatchling"]
